[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
authors = ["Rj Lacanlale"]
license = "MIT"
homepage = "https://github.com/rjlacanlaled/crate-keeper"
repository = "https://github.com/rjlacanlaled/crate-keeper"
exclude = ["benches/", "tests/"]

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
serde = "1"
# json
serde_json = "1"
serde_with = "3.4"